--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage":"https://nagarajsp253.github.io/ReactExpenseApp/",
+  "homepage":"https://nagarajsp253.github.io/ReactSimpleSite/",
   "name": "testingproject",
   "version": "0.1.0",
   "private": true,
